--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -4,7 +4,7 @@
 
 #main-nav {
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     background-color: $lavender;
 
 
