--- a/dev/scss/layout/_header-2.scss
+++ b/dev/scss/layout/_header-2.scss
@@ -15,7 +15,7 @@
         display: grid;
         grid-gap: 0;
         grid-template-areas: "logo . burger";
-        grid-template-columns: (15% auto 20%);
+        grid-template-columns: (5% auto 20%);
 
         @include lg {
             grid-template-columns: (10% auto 10%);
