--- a/dev/scss/sections/_index-content.scss
+++ b/dev/scss/sections/_index-content.scss
@@ -319,7 +319,7 @@
             height: 50vh;
         }
         @include lg {
-            height: 80vh;
+            height: 60vh;
         }
     
         >div {
